@startuml BaseCredentialClassDiagram

!theme plain
skinparam linetype ortho
skinparam nodesep 80
skinparam ranksep 80

left to right direction

' ════════════════════════════════════════════════════════════════════════════════════
' CONTROLLER LAYER
' ════════════════════════════════════════════════════════════════════════════════════

class BaseCredentialController {
}

' ════════════════════════════════════════════════════════════════════════════════════
' DTO LAYER
' ════════════════════════════════════════════════════════════════════════════════════

class CreateBaseCredentialDto {
}

class UpdateBaseCredentialDto {
}

' ════════════════════════════════════════════════════════════════════════════════════
' SERVICE LAYER
' ════════════════════════════════════════════════════════════════════════════════════

class BaseCredentialService {
}

class BunnyService {
}

class DataSource {
}

' ════════════════════════════════════════════════════════════════════════════════════
' ENTITY LAYER
' ════════════════════════════════════════════════════════════════════════════════════

class BaseCredential {
}

class Credential {
}

' ════════════════════════════════════════════════════════════════════════════════════
' RELATIONSHIPS
' ════════════════════════════════════════════════════════════════════════════════════

BaseCredentialController --> CreateBaseCredentialDto
BaseCredentialController --> UpdateBaseCredentialDto
BaseCredentialController --> BaseCredentialService

BaseCredentialService --> DataSource
BaseCredentialService --> BunnyService
BaseCredentialService --> BaseCredential

BaseCredential --> Credential

@enduml
